<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="420dp"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/snow"
    app:cardCornerRadius="32dp"
    app:cardElevation="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/lets_schedule_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/let_s_schedule"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/partner_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/pick_a_partner_from_your_chat_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lets_schedule_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/partner_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:boxBackgroundColor="@color/cultured"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/text_input_box_stroke_color"
            app:counterMaxLength="50"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/partner_tv">

            <AutoCompleteTextView
                android:id="@+id/partner_autocomplete_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_regular"
                android:inputType="none"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"/>


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/place_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/where_will_it_take_place"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/partner_text_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/place_text_input"
            style="@style/UserInfoFieldTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:counterMaxLength="50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/place_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_regular"
                android:gravity="top"
                android:maxLength="50" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/activity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place_text_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_text_input"
            style="@style/UserInfoFieldTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:counterMaxLength="20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_regular"
                android:gravity="top"
                android:inputType="text"
                android:maxLength="20" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/pick_a_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_text_input" />

        <nl.joery.timerangepicker.TimeRangePicker
            android:id="@+id/picker"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:trp_startTime="12:00"
            app:trp_endTime="14:00"
            app:trp_thumbColor="@color/colorAccent"
            app:trp_sliderRangeColor="@color/colorPrimary"
            app:trp_clockTickColor="@color/colorPrimary"
            app:trp_clockLabelColor="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/time_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:padding="8dp"
            android:id="@+id/time_range_tv"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/time_range_sample"
            app:layout_constraintStart_toEndOf="@id/picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/picker" />

        <com.solopov.common.base.view.ProgressButton
            android:id="@+id/save_btn"
            android:layout_width="180dp"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/picker"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/inter_semibold"
            app:text="@string/save"
            style="@style/Widget.ProgressButton.Blueberry"
            android:layout_centerInParent="true"
            app:enabled="true"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
